eks/sample-service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx-service
spec:
  type: ClusterIP
  selector:
    app: nginx-deployment
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
      name: http
